--- a/vercel.json
+++ b/vercel.json
@@ -1,29 +1,11 @@
 {
-  "version": 2,
+  "framework": "vite",
+  "outputDirectory": "dist",
   "builds": [
-    {
-      "src": "index.html",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
-    }
+    { "src": "package.json", "use": "@vercel/static-build", "config": { "distDir": "dist" } }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ],
-  "env": {
-    "VITE_FIREBASE_API_KEY": "",
-    "VITE_FIREBASE_AUTH_DOMAIN": "",
-    "VITE_FIREBASE_PROJECT_ID": "",
-    "VITE_FIREBASE_STORAGE_BUCKET": "",
-    "VITE_FIREBASE_MESSAGING_SENDER_ID": "",
-    "VITE_FIREBASE_APP_ID": "",
-    "VITE_FIREBASE_MEASUREMENT_ID": "",
-    "VITE_ADMIN_EMAIL": "",
-    "VITE_ADMIN_PASSWORD": ""
-  }
+    { "handle": "filesystem" },
+    { "src": "/.*", "dest": "/index.html" }
+  ]
 } 
