--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,5 @@
 {
-  "framework": "vite",
-  "outputDirectory": "dist",
-  "builds": [
-    { "src": "package.json", "use": "@vercel/static-build", "config": { "distDir": "dist" } }
-  ],
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/.*", "dest": "/index.html" }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
-} 
+}
